--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   },
   "devDependencies": {
     "eslint": "^5.12.0",
-    "eslint-plugin-jasmine": "^2.10.1"
+    "eslint-plugin-jasmine": "^2.10.1",
+    "chai-http": "^4.2.1",
+    "express": "^4.16.4",
+    "http-proxy-middleware": "^0.19.1"
   }
 }
