--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,2 @@
 node_modules/
-apigateway/package-lock.json
-web/package-lock.json
-users/package-lock.json
-notes/package-lock.json
+**/package-lock.json
