--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "mocha": "^5.2.0"
   },
   "devDependencies": {
-    "eslint": "^5.12.1",
-    "eslint-plugin-jasmine": "^2.10.1",
     "chai-http": "^4.2.1",
     "express": "^4.16.4",
-    "http-proxy-middleware": "^0.19.1"
+    "http-proxy-middleware": "^0.19.1",
+    "eslint": "^5.12.1",
+    "eslint-plugin-jasmine": "^2.10.1"    
   }
 }
